# FinalProject_MahjongAPP

./: CMakeLists.txt  README.md
achi/: MahjongScorer.cpp  MahjongScorer.h  TileButton.cpp  TileButton.h
su/: MahjongCore.cpp  MahjongCore.h
yen/: BWindow.cpp  BWindow.h  SquareButton.cpp  SquareButton.h  StartWindow.cpp  StartWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
